# phiarc-general-model

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: PAGM.md
en2cw/: CMakeLists.txt  en2cw.cpp  en2cw.h
en2cw/include/en2cw/: GlobalConfig.h
en2cw/src/: EecInfer.cpp  EecTrain.cpp  main.cpp
en2cw/src/model/: Transformer.cpp
example/model/: index.pagm
pagm/: CMakeLists.txt
pagm/include/: CMakeLists.txt
pagm/include/pagm/: GlobalConfig.h
pagm/include/pagm/io/: Config.hpp  Parameter.hpp
pagm/include/pagm/math/: Matrix.hpp
pagm/include/pagm/model/: Forward.hpp  Tokenizer.hpp  Transformer.hpp
pagm/include/pagm/session/: Infer.hpp
pagm/src/: CMakeLists.txt  PagmInfer.cpp  PagmTrain.cpp
pagm/src/file/: ModelConfig.cpp  ModelPara.cpp
pagm/src/io/: CMakeLists.txt  Config.cpp  ModelConfig.cpp  ModelPara.cpp  Parameter.cpp
pagm/src/math/: CMakeLists.txt  Matrix.cpp
pagm/src/model/: CMakeLists.txt  Forward.cpp  Tokenizer.cpp  Transformer.cpp
pagm/src/session/: CMakeLists.txt  Infer.cpp
pagm/tests/: CMakeLists.txt  PagmTest.cpp
pagm/tests/data/: index.pagm
